[tool.poetry]
name = "chouseisan_py"
version = "0.1.1"
description = "Automate the operation of chouseisan.com"
authors = ["Ryuji TSUTSUI <ryu22e@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryu22e/chouseisan_py"
repository = "https://github.com/ryu22e/chouseisan_py"
classifiers = []

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "4.0.1"
pytest-randomly = "^3.12.0"
black = "22.1.0"
isort = "5.10.1"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.1.1"
pytest-isort = "^3.0.0"
pytest-cov = "^3.0.0"
mypy = "0.931"
pytest-mypy = "^0.9.1"
pre-commit = "^2.19.0"
bump2version = "^1.0.1"
pytest-responses = "^0.5.0"
types-requests = "^2.27.27"
types-beautifulsoup4 = "^4.11.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-q --flake8 --black --isort --mypy --cov --cov-report=xml"
