[tool.poetry]
name = "chouseisan_py"
version = "0.1.1"
description = "Automate the operation of chouseisan.com"
authors = ["Ryuji TSUTSUI <ryu22e@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ryu22e/chouseisan_py"
repository = "https://github.com/ryu22e/chouseisan_py"
classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
# See: https://github.com/python-poetry/poetry/issues/8287#issuecomment-1915289914
pyyaml = "<5.4.0 || >5.4.0,<5.4.1 || >5.4.1,<6.0.0 || >6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
flake8 = "4.0.1"
pytest-randomly = "^3.15.0"
black = "24.3.0"
isort = "5.10.1"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.1.1"
pytest-isort = "^4.0.0"
pytest-cov = "^5.0.0"
mypy = "0.931"
pytest-mypy = "^0.10.3"
pre-commit = "^3.5.0"
bump2version = "^1.0.1"
pytest-responses = "^0.5.1"
types-requests = "^2.31.0"
types-beautifulsoup4 = "^4.12.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-q --flake8 --black --isort --mypy --cov --cov-report=xml"
